<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.login.LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_pets_24"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/yellow_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

    <TextView
        android:id="@+id/loginSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pet_care_travel"
        android:textAlignment="center"
        android:textColor="@color/yellow_700"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/loginSubtitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_email"
            app:boxBackgroundColor="@color/white"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/loginEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordgLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_password"
            app:boxBackgroundColor="@color/white"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/loginPassField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onPassResetClick"
            android:padding="16dp"
            android:text="@string/reset_password"
            android:textAlignment="textEnd"
            android:textColor="@color/teal_700"
            tools:ignore="UsingOnClickInXml" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onLoginClick"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:onClick="onCreateAccountClick"
        android:text="@string/didn_t_have_account_create_one"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/loginForm"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>