<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.pets.EditPetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/updatePetToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_200"
        app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
        app:title="Update Pet"
        app:titleTextColor="@color/white" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/addPetImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_baseline_pets_24"
                app:civ_border_width="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pet_name"
                android:padding="16dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/addPetImage">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPetAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pet_age"
                android:padding="16dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/addPetName">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:maxLength="8"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPetSpecie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pet_specie"
                android:padding="16dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/addPetAge">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPetHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pet_height"
                android:padding="16dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/addPetSpecie">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPetWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pet_weight"
                android:padding="16dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/addPetHeight">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addPetContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/owner_whatsapp_contact_number"
                android:padding="16dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/addPetWeight">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    android:maxLength="11"
                    tools:ignore="Autofill,LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/addPetGenderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                app:layout_constraintTop_toBottomOf="@+id/addPetContact" />

            <RadioGroup
                android:id="@+id/addPetGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:overScrollMode="always"
                android:scrollbars="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/addPetGenderLabel">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />
            </RadioGroup>


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/updatePetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"

                android:text="@string/update_my_pet"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addPetGender" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</LinearLayout>