<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/petCircleCardMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/petCardCircleImage"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_baseline_pets_24"
                    app:civ_border_color="@color/black"
                    app:civ_border_overlay="true"
                    app:civ_border_width="1dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/petCardCircleTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/app_name"
                        android:textSize="20sp"
                        app:drawableEndCompat="@drawable/ic_baseline_edit_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/petCircleHygieneButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/hygiene" />

                        <ImageButton
                            android:id="@+id/petCircleAlarmButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:background="@color/yellow_500"
                            android:padding="6dp"
                            android:src="@drawable/ic_baseline_access_alarm_24" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/petCircleTravelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="@string/travel" />
                </LinearLayout>

            </LinearLayout>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/petCircleCardSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/petCircleCardMain"
                android:layout_centerHorizontal="true"
                android:checked="false"
                android:padding="16dp"
                android:text="@string/sell_this_pet" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>